RESOLVED FIXED218872
canvas-createPattern-video-modify-crash-log.txt asserts on debug GPUProcess bots
https://bugs.webkit.org/show_bug.cgi?id=218872
Summary canvas-createPattern-video-modify-crash-log.txt asserts on debug GPUProcess bots
Tim Horton
Reported 2020-11-12 14:39:47 PST
canvas-createPattern-video-modify-crash-log.txt asserts on debug GPUProcess bots
Attachments
Patch (1.60 KB, patch)
2020-11-12 14:40 PST, Tim Horton
no flags
Tim Horton
Comment 1 2020-11-12 14:40:13 PST
EWS
Comment 2 2020-11-12 15:45:28 PST
Committed r269758: <https://trac.webkit.org/changeset/269758> All reviewed patches have been landed. Closing bug and clearing flags on attachment 413976 [details].
Radar WebKit Bug Importer
Comment 3 2020-11-12 15:46:23 PST
Note You need to log in before you can comment on or make changes to this bug.