canvas-createPattern-video-modify-crash-log.txt asserts on debug GPUProcess bots https://bugs.webkit.org/show_bug.cgi?id=218872

Reviewed by Simon Fraser.

* WebProcess/GPU/graphics/ImageBufferShareableBitmapBackend.cpp:
(WebKit::ImageBufferShareableBitmapBackend::create):
This assertion is wrong; make it the same as the one in ImageBufferCGBitmapBackend.


Canonical link: https://commits.webkit.org/231532@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269758 268f45cc-cd09-0410-ab3c-d52691b4dbfc